# UAV_SAR

./: .gitignore  README.md
common/osal/: osal.c
module_sample/camera_emu/: test_payload_cam_emu_media.c  test_payload_cam_emu_media.h
module_sample/utils/: util_file.c  util_file.h  util_misc.c  util_time.c  util_time.h
raspberry_pi/: CMakeLists.txt  main.py
raspberry_pi/application/: dji_sdk_app_info.h  dji_sdk_config.h  main.c
raspberry_pi/hal/: hal_uart.c
raspberry_pi/module/: fc_subscription.c  fc_subscription.h  payload_xport.c  widget.c  widget.h  widget_debug.c
raspberry_pi/module/widget_file/cn_big_screen/: widget_config.json
raspberry_pi/module/widget_file/en_big_screen/: widget_config.json
